<resources>
    <string name="app_name">Fa\'M\'art</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="login_btn">Login</string>
    <string name="no_of_incorrect_attempts">Number of incorrect attempts : </string>
    <string name="new_user_register">New User -Register</string>
    <string name="logout">Logout</string>
    <string name="welcome_to_fa_m_art">Welcome To Fa\'M\'art</string>
    <string name="settings">Settings</string>
    <string name="refresh">Refresh</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="reset_passowrd_email">Email</string>
    <string name="reset_password_btn">Reset Password</string>
    <string name="profile">Profile</string>
</resources>
