<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/logout_menu"
        android:orderInCategory="100"
        android:title="@string/logout"
        app:showAsAction="never" />

    <item
        android:id="@+id/settings_menu"
        android:orderInCategory="200"
        android:title="@string/settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/refresh_menu"
        android:orderInCategory="300"
        android:title="@string/refresh"
        app:showAsAction="never" />

    <item
        android:id="@+id/profile_menu"
        android:orderInCategory="300"
        android:title="@string/profile"
        app:showAsAction="never" />
</menu>